done with codeschool requirements

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,27 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
   Welcome to the HTML Portfolio Project
-
+  <div class="header">
+    <h1>Ezhil</h1>
+    <h2>Software developer</h1>
+  </div>
+  <div class="tagline">
+    <h3>Learn more about me</h3>
+    <p>I am full stack developer. I enjoy web application developmenet. I got java related certification. Currently i am learning latest technologies like angular js, amazon web service etc </p>
+  </div>
+  <dic class="skills">
+    <h3>My skills</h3>
+    <p>I enjoy writing back end code using java</p>
+    <ul>
+      <li>HTML</li>
+      <li>java</li>
+      <li>amazon</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>Contact me</h3>
+    <p>You can contact me via email <a href="http://google.lk">My email address can be found on this link</a></p>
+  </div>
 </body>
 </html>
